2677 [OneClick]             fixed wrong track information in some use cases
2676 [x265]                 fixed duplicated custom command line values (regression of 2673)
2675                        improved portable AviSynth runtime handling
2674 [Audio Cutter]         preselect output file. Feature request #597
2673 [x265]                 added --sar detection. Feature request #601
2672 [Title Selector]       added option to change the minimum title length also in the global settings
2671 [VobSubber]            remember the "keep all..." setting. Feature request #600
2670 [Haali Media Splitter] added "Haali Media Splitter" as update package
                            improved detection if it is installed
                            if it is needed by the HD Streams Extractor it will be installed (administrative permissions are required)
2669 [VobSubber]            added title selector for DVD sources incl. multi-angle support
2668 [FileIndexer]          added title selector for DVD sources incl. multi-angle support
2667 [TitleSelector]        added support for multi-angle DVD sources
     [OneClick]             added support for multi-angle DVD sources
2666 [TitleSelector]        improved title selector for DVD/Blu-ray sources
2665 [OneClick]             added support for folders as drag&drop source of the input control
2664 [IFOParser]            improved type detection
2663 [FileIndexer]          fixed processing of DVDs with only one PGC (regression of 2658)
2662 [IFOParser]            fixed sometimes not able to get the language information (regression of 2657)
2661 [Main]                 reverted 2639. Bug #843
2660 [Presets]              fixed not changing the selected preset if no change has been made in the configuration window. Bug #844
2659 [VobSubber]            fixed subtitle export for multi-angle discs
2658 [OneClick]+[FileIndexer] only use pgcdemux if it is a multi-pgc or multi-angle DVD source